--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -825,14 +825,14 @@
         var tableHtml = "";
         $.ajax({
             type: 'POST',
-           
+
             url: '/SeeDoctor/FetchDoctoInfo',
             data:{'doctorID': _selecteddoctorID},
             dataType: 'json',
             success: function (response) {
                 if (response.Object != null || response.Object != undefined)
                 {
-                
+
                     var spec = "";
                     var lang = "";
                     for (var i = 0; i < response.Object.specialities.length; i++)
@@ -842,7 +842,7 @@
                     for (var i = 0; i < response.Object.languages.length; i++) {
                         lang = lang + response.Object.languages[i].languageName + ",";
                     }
-              
+
                     spec = spec.slice(0, -1);
                     lang = lang.slice(0, -1);
 
@@ -853,7 +853,7 @@
                     var cc = "N.A";
                     var docstate = "N.A";
                     var gender = "";
-                
+
                     if (response.Object.cellPhone != null) { doccell = response.Object.cellPhone; }
                     if (response.Object.email != null) { docemail = response.Object.email; }
                     if (response.Object.consultCharges != null) { cc = response.Object.consultCharges; }
@@ -889,10 +889,10 @@
                     });
                   //  $('#wizard').smartWizard('goToStep', 1);
 
-                    
+
 
                 }
-               
+
                 else{
                 //Stripe Initialization after getting consultCharges of selected doctor
                 var amount=response.Object.consultCharges*100;
@@ -932,12 +932,12 @@
 
                 oStripePayCheckout.initialize();
             }
-            
+
             },
             error: errorRes
 
         });
-   
+
     }
     $(document).ready(function () {
         if('@SessionHandler.UserInfo.timeZone'=='')
@@ -967,7 +967,7 @@
             $('.buttonNext').hide();
             $('.buttonPrevious').hide();
         }
-       
+
         //Get Files in ROV - Starts
         reader1.addEventListener("load", function () {
             $("#hdnFileID1").val(reader1.result);
@@ -1002,7 +1002,7 @@
         _objAppointment["rovFile3Base64"] = $("#hdnFileID3").val();
         _objAppointment["rovFile3Name"] = $("#hdnFileID3Name").val();
 
-        
+
 
         $.ajax({
             type: 'POST',
@@ -1021,7 +1021,7 @@
                         styling: 'bootstrap3'
                     });
                 }
-                
+
                 if (result.Success == true) {
 
                     if (result.ApiResultModel.message == "") {
@@ -1033,7 +1033,8 @@
                             type: 'info',addclass: 'dark',
                             styling: 'bootstrap3'
                         });
-
+                        var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + $("#doctorid").val() + '&message=Live-App-created-'+result.ApiResultModel.ID;
+                        $.post(cCallLogUrl);
 
                         if (appType == "S")
                         {
@@ -1062,7 +1063,12 @@
                     text: 'Error in appointment saving.',
                     type: 'error',
                     styling: 'bootstrap3'
-                });}
+                });
+
+                var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + $("#doctorid").val() + '&message=Err-in-app-save';
+                $.post(cCallLogUrl);
+                }
+
 
             },
             error: errorRes
@@ -1113,9 +1119,8 @@
                         });*/
 
                         //Log consultion creation sucess
-                        var cCallLogUrl = '@Url.Action("ConsultCreatedbyPatient", "UserChat")?doctorId=' + doctorID;
-                        $.post(cCallLogUrl);
-
+                        var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + doctorID + '&message=consult-created-by-patient';
+                    $.post(cCallLogUrl);
                         if(appType="L")
                         {
                             debugger;
@@ -1133,7 +1138,10 @@
                                 }
                             }
                             debugger;
+
                             if(oDocInfo!=null){
+                                var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + doctorID + '&message=consultID-sent-to-doctor';
+                                $.post(cCallLogUrl);
                                 chat.server.sendMessageToDoctor(
                                 {
                                     SenderId: '@SessionHandler.UserInfo.Id',
@@ -1146,6 +1154,7 @@
                                     Message: JSON.stringify({ status: 'consultID', name: consultID }),
                                     UserGroup: 'doctors'
                                 });
+
                                 hideLoader();
                                 new PNotify({
                                     title: 'Success',
@@ -1156,10 +1165,13 @@
                             }
                             else {
                                 new PNotify({ title: 'Error', text: "Doctor is offline. Please try later", type: 'error', styling: 'bootstrap3' });
+
+                                var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + doctorID + '&message=doctor-is-offline-for-live-call';
+                                $.post(cCallLogUrl);
                                 return false;
                             }
                             debugger;
-                            
+
 
                             var signalRInfo = JSON.parse(localStorage.getItem('signalRInfo'));
                             var tokboxInfo=localStorage.getItem('tokbox');
@@ -1170,12 +1182,20 @@
                           //  $.post(cUrlReadyForCall, function (oResp) {
                                 if (tokboxInfo!="0")
                                 {
-                                    //Redirect patient to call
-                                    window.location = '@Url.Action("Index","UserChat")?tokboxInfo='+tokboxInfo;
+                                    var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + doctorID + '&message=patient-ready-for-VC';
+                                    $.post( cCallLogUrl, function() {
+                                        //Redirect patient to call
+                                        window.location = '@Url.Action("Index","UserChat")?tokboxInfo='+tokboxInfo;
+                                    });
+
+
 
                                 }
                                 else
-                                { new PNotify({ title: 'Error', text: "Error in getting tokbox info.", type: 'error', styling: 'bootstrap3' });}
+                                { new PNotify({ title: 'Error', text: "Error in getting tokbox info.", type: 'error', styling: 'bootstrap3' });
+                                var cCallLogUrl = '@Url.Action("AddCallLogbyPatient", "UserChat")?doctorId=' + doctorID + '&message=Error-in-getting-tokbox-info';
+                                $.post(cCallLogUrl);
+                                }
                           // });
 
                             //Redirect User for video chat
