appointment and consultations picture removed and added speciality and languages

--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -46,7 +46,7 @@
     <script type="text/javascript" src="@Url.Content("~/Scripts/dataTables.responsive.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/bootstrap-wysiwyg.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.hotkeys.js")"></script>
-
+    <script type="text/javascript" src="@Url.Content("~/Scripts/eModal.min.js")"></script>
     <!--  If this is an MVC project then use the following -->
     <!--  <script src="~/signalr/hubs" type="text/javascript"></script> -->
     <script src="@Url.Content("~/signalr/hubs")"></script>
